chore: use our fork of heighliner

--- a/.github/workflows/draft-release.yaml
+++ b/.github/workflows/draft-release.yaml
@@ -28,8 +28,13 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: strangelove-ventures/heighliner-build-action@v1.0.2
+        uses: strangelove-ventures/heighliner-build-action@v1.0.3
         with:
+          # Heighliner fork supporting Go v1.24
+          heighliner-owner: 'noble-assets'
+          heighliner-tag: 'v1.7.3'
+
+          # Heighliner chains.yaml config
           chain: noble
           dockerfile: cosmos
           build-target: make install
