--- a/app.yaml
+++ b/app.yaml
@@ -3,10 +3,44 @@ modules:
     config:
       "@type": cosmos.app.runtime.v1alpha1.Module
       app_name: Noble
-      pre_blockers: [ upgrade ]
-      begin_blockers: [ capability, authority, slashing, evidence, staking, ibc, authz, swap ]
-      end_blockers: [ crisis, staking, feegrant, forwarding, autocctp ]
-      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, autocctp, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp ]
+      pre_blockers: [upgrade]
+      begin_blockers:
+        [capability, authority, slashing, evidence, staking, ibc, authz, swap]
+      end_blockers: [crisis, staking, feegrant, forwarding, autocctp]
+      init_genesis:
+        [
+          capability,
+          transfer,
+          auth,
+          bank,
+          staking,
+          slashing,
+          crisis,
+          fiat-tokenfactory,
+          globalfee,
+          genutil,
+          ibc,
+          interchainaccounts,
+          packetfowardmiddleware,
+          evidence,
+          authz,
+          feegrant,
+          params,
+          upgrade,
+          vesting,
+          cctp,
+          forwarding,
+          autocctp,
+          aura,
+          halo,
+          florin,
+          authority,
+          wormhole,
+          dollar,
+          swap,
+          hyperlane,
+          warp,
+        ]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
@@ -20,22 +54,22 @@ modules:
         - account: fee_collector
         - account: interchainaccounts
         - account: bonded_tokens_pool
-          permissions: [ burner, staking ]
+          permissions: [burner, staking]
         - account: not_bonded_tokens_pool
-          permissions: [ burner, staking ]
+          permissions: [burner, staking]
         - account: transfer
-          permissions: [ burner, minter ]
+          permissions: [burner, minter]
         - account: fiat-tokenfactory
-          permissions: [ burner, minter ]
+          permissions: [burner, minter]
         - account: cctp
         - account: halo
-          permissions: [ burner, minter ]
+          permissions: [burner, minter]
         - account: florin
-          permissions: [ burner, minter ]
+          permissions: [burner, minter]
         - account: aura
-          permissions: [ burner, minter ]
+          permissions: [burner, minter]
         - account: dollar
-          permissions: [ burner, minter ]
+          permissions: [burner, minter]
         - account: dollar/yield
         - account: hyperlane
         - account: warp
@@ -47,7 +81,7 @@ modules:
     config:
       "@type": cosmos.bank.module.v1.Module
       blocked_module_accounts_override:
-        [ auth, bonded_tokens_pool, not_bonded_tokens_pool ]
+        [auth, bonded_tokens_pool, not_bonded_tokens_pool]
       authority: authority # Utilize our custom x/authority module.
   - name: consensus
     config:
@@ -87,7 +121,7 @@ modules:
   - name: vesting
     config:
       "@type": cosmos.vesting.module.v1.Module
-  
+
   # Circle Modules
   - name: cctp
     config:
@@ -95,13 +129,13 @@ modules:
   - name: fiat-tokenfactory
     config:
       "@type": circle.fiattokenfactory.module.v1.Module
-  
+
   # Ondo Modules
   - name: aura
     config:
       "@type": aura.module.v1.Module
       denom: ausdy
-  
+
   # Hashnote Modules
   - name: halo
     config:
@@ -132,6 +166,9 @@ modules:
   - name: authority
     config:
       "@type": noble.authority.module.v1.Module
+  - name: autocctp
+    config:
+      "@type": noble.autocctp.module.v1.Module
   - name: dollar
     config:
       "@type": noble.dollar.module.v1.Module
@@ -143,9 +180,6 @@ modules:
     config:
       "@type": noble.forwarding.module.v1.Module
       authority: authority # Utilize our custom x/authority module.
-  - name: autocctp
-    config:
-      "@type": noble.autocctp.module.v1.Module
   - name: globalfee
     config:
       "@type": noble.globalfee.module.v1.Module
