--- a/app.yaml
+++ b/app.yaml
@@ -5,8 +5,8 @@ modules:
       app_name: Noble
       pre_blockers: [ upgrade ]
       begin_blockers: [ capability, authority, slashing, evidence, staking, ibc, authz, swap ]
-      end_blockers: [ crisis, staking, feegrant, forwarding ]
-      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp ]
+      end_blockers: [ crisis, staking, feegrant, forwarding, autocctp ]
+      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, autocctp, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp ]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
@@ -87,7 +87,7 @@ modules:
   - name: vesting
     config:
       "@type": cosmos.vesting.module.v1.Module
-  
+
   # Circle Modules
   - name: cctp
     config:
@@ -95,13 +95,13 @@ modules:
   - name: fiat-tokenfactory
     config:
       "@type": circle.fiattokenfactory.module.v1.Module
-  
+
   # Ondo Modules
   - name: aura
     config:
       "@type": aura.module.v1.Module
       denom: ausdy
-  
+
   # Hashnote Modules
   - name: halo
     config:
@@ -132,6 +132,9 @@ modules:
   - name: authority
     config:
       "@type": noble.authority.module.v1.Module
+  - name: autocctp
+    config:
+      "@type": noble.autocctp.module.v1.Module
   - name: dollar
     config:
       "@type": noble.dollar.module.v1.Module
