chore: rename operations to align with forwarding

--- a/api/config.json
+++ b/api/config.json
@@ -459,6 +459,12 @@
         "rename": {
           "Query": "AutoCCTP"
         }
+      },
+      "operationIds": {
+        "rename": {
+          "Address": "AutoCCTPAddress",
+          "Stats": "AutoCCTPStats"
+        }
       }
     },
     {
