feat: integrate ibc rate limit module (#541)

--- a/api/config.json
+++ b/api/config.json
@@ -59,9 +59,9 @@
         "Channel",
         "Client",
         "Connection",
-        "Fee",
         "ICA Controller",
         "ICA Host",
+        "Rate Limit",
         "Transfer"
       ]
     },
@@ -103,6 +103,35 @@
     }
   ],
   "apis": [
+    {
+      "url": "./api/tmp-swagger-gen/aura/v1/query.swagger.json",
+      "tags": {
+        "rename": {
+          "Query": "Aura"
+        }
+      },
+      "operationIds": {
+        "rename": {
+          "Minters": "AuraMinters",
+          "Owner": "AuraOwner",
+          "Paused": "AuraPaused"
+        }
+      }
+    },
+    {
+      "url": "./api/tmp-swagger-gen/aura/blocklist/v1/query.swagger.json",
+      "tags": {
+        "rename": {
+          "Query": "Aura Blocklist"
+        }
+      },
+      "operationIds": {
+        "rename": {
+          "Address": "AuraBlocklistAddress",
+          "Owner": "AuraBlocklistOwner"
+        }
+      }
+    },
     {
       "url": "./api/tmp-swagger-gen/circle/cctp/v1/query.swagger.json",
       "tags": {
@@ -378,14 +407,6 @@
       }
     },
     {
-      "url": "./api/tmp-swagger-gen/ibc/applications/fee/v1/query.swagger.json",
-      "tags": {
-        "rename": {
-          "Query": "Fee"
-        }
-      }
-    },
-    {
       "url": "./api/tmp-swagger-gen/ibc/applications/interchain_accounts/controller/v1/query.swagger.json",
       "tags": {
         "rename": {
@@ -587,31 +608,10 @@
       }
     },
     {
-      "url": "./api/tmp-swagger-gen/aura/v1/query.swagger.json",
+      "url": "./api/tmp-swagger-gen/ratelimit/v1/query.swagger.json",
       "tags": {
         "rename": {
-          "Query": "Aura"
-        }
-      },
-      "operationIds": {
-        "rename": {
-          "Minters": "AuraMinters",
-          "Owner": "AuraOwner",
-          "Paused": "AuraPaused"
-        }
-      }
-    },
-    {
-      "url": "./api/tmp-swagger-gen/aura/blocklist/v1/query.swagger.json",
-      "tags": {
-        "rename": {
-          "Query": "Aura Blocklist"
-        }
-      },
-      "operationIds": {
-        "rename": {
-          "Address": "AuraBlocklistAddress",
-          "Owner": "AuraBlocklistOwner"
+          "Query": "Rate Limit"
         }
       }
     },
@@ -622,7 +622,7 @@
           "Query": "Wormhole"
         }
       },
-      "operationsIds": {
+      "operationIds": {
         "rename": {
           "Config": "WormholeConfig"
         }
