--- a/app.yaml
+++ b/app.yaml
@@ -5,8 +5,8 @@ modules:
       app_name: Noble
       pre_blockers: [ upgrade ]
       begin_blockers: [ capability, authority, slashing, evidence, staking, ibc, authz, swap, ratelimit ]
-      end_blockers: [ crisis, staking, feegrant, forwarding, autocctp, ratelimit ]
-      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, autocctp, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp, ratelimit ]
+      end_blockers: [ crisis, staking, feegrant, forwarding, ratelimit ]
+      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp, ratelimit ]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
@@ -132,9 +132,6 @@ modules:
   - name: authority
     config:
       "@type": noble.authority.module.v1.Module
-  - name: autocctp
-    config:
-      "@type": noble.autocctp.module.v1.Module
   - name: dollar
     config:
       "@type": noble.dollar.module.v1.Module
