--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - '**'
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -19,7 +22,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -38,5 +41,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ steps.normalize.outputs.tag }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.normalize.outputs.tag }}
           platforms: linux/amd64,linux/arm64
