--- a/.github/workflows/draft-release.yaml
+++ b/.github/workflows/draft-release.yaml
@@ -7,7 +7,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
@@ -17,30 +16,30 @@ jobs:
       packages: write
 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: strangelove-ventures/heighliner-build-action@v1.0.3
-        with:
-          # Heighliner fork supporting Go v1.24
-          heighliner-owner: 'noble-assets'
-          heighliner-tag: 'v1.7.3'
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-          # Heighliner chains.yaml config
-          chain: noble
-          dockerfile: cosmos
-          build-target: make install
-          binaries: |
-            - /go/bin/nobled
-  
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
+          platforms: linux/amd64,linux/arm64
+
   draft-release:
     needs: build-and-push-image
     runs-on: ubuntu-latest
