--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 env:
-  TAR_PATH: heighliner.tar
+  TAR_PATH: nobled.tar
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
