--- a/app.yaml
+++ b/app.yaml
@@ -86,6 +86,7 @@ modules:
         - account: hyperlane
         - account: warp
         - account: orbiter
+        - account: orbiter/dust_collector
       authority: authority # Utilize our custom x/authority module.
   - name: authz
     config:
@@ -94,7 +95,12 @@ modules:
     config:
       "@type": cosmos.bank.module.v1.Module
       blocked_module_accounts_override:
-        [auth, bonded_tokens_pool, not_bonded_tokens_pool]
+        [
+          auth,
+          bonded_tokens_pool,
+          not_bonded_tokens_pool,
+          orbiter/dust_collector,
+        ]
       authority: authority # Utilize our custom x/authority module.
   - name: consensus
     config:
